Rename directive to process(es) from provenance.

--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -44,7 +44,7 @@
                         <small class="text-muted">{{process.birthtime | toDateString}}</small>
                     </p>
                     <div ng-if="process.showDetails">
-                        <home-provenance-details process="process"></home-provenance-details>
+                        <home-process-details process="process"></home-process-details>
                     </div>
                 </div>
             </li>
