Use home-processes from home-provenance.

--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="row" ng-show="show('processes')">
-                <div home-provenance project="project"></div>
+                <div home-processes project="project"></div>
             </div>
         </div>
     </div>
