--- a/website/app/index.html
+++ b/website/app/index.html
@@ -204,6 +204,7 @@
 <script src="application/core/projects/project/home/directives/display-sample.js"></script>
 <script src="application/core/projects/project/home/directives/display-review.js"></script>
 <script src="application/core/projects/project/home/directives/display-note.js"></script>
+<script src="application/core/projects/project/home/directives/display-process.js"></script>
 <script src="application/core/projects/project/home/directives/display-item.js"></script>
 <script src="application/core/projects/project/home/directives/home-calendar.js"></script>
 <script src="application/core/projects/project/home/directives/home-files-directive.js"></script>
@@ -277,6 +278,7 @@
 <script src="application/directives/adproperties-directive.js"></script>
 <script src="application/directives/projecttree-directive.js"></script>
 <script src="application/directives/mc-tree.js"></script>
+<script src="application/directives/mc-tree-display-item.js"></script>
 <script src="application/directives/directory-tree.js"></script>
 <script src="application/directives/mc-tree-leaf.js"></script>
 <script src="application/directives/mc-tree-dir.js"></script>
