--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -26,27 +26,9 @@
             <li class="home-item"
                 ng-class="{'open-item-details': process.showDetails}"
                 ng-repeat="process in all | filter:search | event:project.date:project.nextdate as procs">
-                <div>
-                    <span ng-click="process.showDetails = !process.showDetails" style="cursor: pointer">
-                        <i class="fa"
-                           ng-class="{'fa-caret-right': !process.showDetails, 'fa-caret-down': process.showDetails}">
-                        </i>
-                        <span ng-show="process.process">
-                            {{process.process.name | truncate:25:'...':true}}
-                            <span class="label label-primary"
-                                  style="background-color:#e26a6a">Draft </span>
-                        </span>
-                        <span ng-hide="process.process">
-                            {{process.name | truncate:25:'...':true}}
-                        </span>
-                    </span>
-                    <p>
-                        <small class="text-muted">{{process.birthtime | toDateString}}</small>
-                    </p>
-                    <div ng-if="process.showDetails">
-                        <home-process-details process="process"></home-process-details>
-                    </div>
-                </div>
+                <display-process process="process"
+                                 show-sideboard="true">
+                </display-process>
             </li>
             <li ng-show="procs.length === 0" class="home-item">
                 <div> No processes.</div>
