--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -2,13 +2,17 @@
     <div class="panel-heading files-color home-panel-heading home-panel-heading">
         <i class="fa fa-fw fa-files-o bold"></i>
         <span>
-            File ({{matchingFiles.length | number}})
+            Files ({{matchingFiles.length | number}})
         </span>
-        <a ng-click="toggleExpanded()"
-           class="pull-right bar-control">
-            <i class="fa"
-               ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
-        </a>
+        <span class="pull-right bar-control">
+            <a ng-click="splitScreen()">
+                <i class="fa fa-fw fa-columns"></i>
+            </a>
+            <a ng-click="toggleExpanded()">
+                <i class="fa fa-fw"
+                   ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
+            </a>
+        </span>
         <input type="text" ng-model="searchInput" class="pull-right col-xs-4"
                placeholder="Search files...">
         <span class="add-item pull-right">
