--- a/website/app/application/core/projects/project/home/directives/home-notes.html
+++ b/website/app/application/core/projects/project/home/directives/home-notes.html
@@ -7,11 +7,15 @@
             </a>
             ({{notes.length}})
         </span>
-        <a ng-click="toggleExpanded()"
-           class="pull-right bar-control">
-            <i class="fa"
-               ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
-        </a>
+        <span class="pull-right bar-control">
+            <a ng-click="splitScreen()">
+                <i class="fa fa-fw fa-columns"></i>
+            </a>
+            <a ng-click="toggleExpanded()">
+                <i class="fa fa-fw"
+                   ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
+            </a>
+        </span>
         <input type="text" ng-model="search" class="pull-right col-xs-4"
                placeholder="Search notes...">
         <span class="add-item pull-right">
