Add sideboard to front page entries.

--- a/website/app/application/core/projects/project/home/directives/display-note.html
+++ b/website/app/application/core/projects/project/home/directives/display-note.html
@@ -6,7 +6,7 @@
     </span>
     <span class="pull-right">
         <a ng-click="addToSideboard(note, $event)" id="{{note.id}}">
-            <i class="fa fa-fw fa-clipboard"></i>
+            <i class="fa fa-fw fa-clipboard inactive"></i>
         </a>
         <i class="fa fa-fw"></i>
         <i class="fa fa-fw"></i>
