--- a/website/app/application/core/projects/project/home/directives/display-review.html
+++ b/website/app/application/core/projects/project/home/directives/display-review.html
@@ -10,7 +10,7 @@
         <a ng-if="showSideboard"
            ng-click="addToSideboard(review, $event)"
            id="{{review.id}}">
-            <i class="fa fa-fw fa-clipboard"></i>
+            <i class="fa fa-fw fa-clipboard inactive"></i>
         </a>
         <i data-toggle="tooltip" data-placement="bottom"
            title="{{review.messages.length}}"
