--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -10,7 +10,7 @@
         <a ng-if="showSideboard"
             ng-click="addToSideboard(sample, $event)"
            id="{{sample.id}}">
-            <i class="fa fa-fw fa-clipboard"></i>
+            <i class="fa fa-fw fa-clipboard inactive"></i>
         </a>
         <i style="color:#E3CF7A" class="fa fa-fw fa-star"></i>
         <i class="fa fa-fw"
