--- a/website/app/index.html
+++ b/website/app/index.html
@@ -331,6 +331,7 @@
 <script src="application/services/sideboard.js"></script>
 <script src="application/services/apply-search.js"></script>
 <script src="application/services/mcfile.js"></script>
+<script src="application/services/homepage-customize.js"></script>
 
 <!-------------------------------- Global model services -------------------------->
 <script src="application/services/model/projects-service.js"></script>
