--- a/website/app/index/sidebar-actions.html
+++ b/website/app/index/sidebar-actions.html
@@ -9,50 +9,45 @@
     </a>
 
     <div ng-show="showProjectActions">
-        <a class="list-group-item"
+        <a ng-show="false" class="list-group-item"
            ui-sref="projects.project.home{id: project.id}"
            ng-click="setActionActive('home')"
            ng-class="{active: isActionActive('home')}">
             <i class="fa fa-fw fa-home"></i> Home
         </a>
 
-        <a class="list-group-item"
-           ng-click="setActionActive('provenance')"
-           ng-class="{active: isActionActive('provenance')}">
+        <a class="list-group-item" ng-class="{disabled: !getActionActive('processes')}"
+           ng-click="setActionActive('processes')">
             <i class="fa fa-fw fa-code-fork"></i> Provenance
             <span class="pull-right white">{{project.processes.length}}</span>
         </a>
 
-        <a class="list-group-item"
-           ng-click="setActionActive('samples')"
-           ng-class="{active: isActionActive('samples')}">
+        <a class="list-group-item" ng-class="{disabled: !getActionActive('samples')}"
+           ng-click="setActionActive('samples')">
             <i class="fa fa-fw fa-cubes"></i> Samples
             <span class="pull-right white">{{project.samples.length}}</span>
         </a>
 
-        <a class="list-group-item"
-           ng-click="setActionActive('notes')"
-           ng-class="{active: isActionActive('notes')}">
+        <a class="list-group-item" ng-class="{disabled: !getActionActive('notes')}"
+           ng-click="setActionActive('notes')">
             <i class="fa fa-fw fa-edit"></i> Notes
             <span class="pull-right white">{{project.notes.length}}</span>
         </a>
 
-        <a class="list-group-item"
-           ng-click="setActionActive('files')"
-           ng-class="{active: isActionActive('files')}">
+        <a class="list-group-item" ng-class="{disabled: !getActionActive('files')}"
+           ng-click="setActionActive('files')">
             <i class="fa fa-fw fa-files-o"></i> Files
             <span class="pull-right"
                   style="color: white">{{project | projectSize}}</span>
         </a>
 
-        <a class="list-group-item"
-           ng-click="setActionActive('reviews')"
-           ng-class="{active: isActionActive('reviews')}">
+        <a class="list-group-item" ng-class="{disabled: !getActionActive('reviews')}"
+           ng-click="setActionActive('reviews')">
             <i class="fa fa-fw fa-comment"></i> Reviews
             <span class="badge badge-light">{{(project.reviews | byKey: 'status': 'open').length}}</span>
         </a>
 
-        <a class="list-group-item"
+        <a ng-show="false" class="list-group-item"
            ng-click="setActionActive('tasks')"
            ng-class="{active: isActionActive('tasks')}">
             <i class="fa fa-fw fa-check-square"></i> Tasks
