Add flow, flow directive and flow service.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -83,6 +83,7 @@
 
 <!-- ---------------------------- External dependencies ----------------->
 
+<script src="assets/js/flow.js"></script>
 <script src="assets/js/jquery-1.11.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
@@ -296,6 +297,7 @@
 <script src="application/directives/properties/display-properties.js"></script>
 <script src="application/directives/action-link.js"></script>
 <script src="application/directives/on-repeat-finished.js"></script>
+<script src="application/directives/mc-flow-button.js"></script>
 
 <!-------------------------------- Global services --------------------------------->
 <script src="application/services/user-service.js"></script>
@@ -331,6 +333,7 @@
 <script src="application/services/sideboard.js"></script>
 <script src="application/services/apply-search.js"></script>
 <script src="application/services/mcfile.js"></script>
+<script src="application/services/mc-flow.js"></script>
 
 <!-------------------------------- Global model services -------------------------->
 <script src="application/services/model/projects-service.js"></script>
