--- a/website/app/index.html
+++ b/website/app/index.html
@@ -216,6 +216,8 @@
 <script src="application/core/projects/project/home/directives/home-note-details.js"></script>
 <script src="application/core/projects/project/home/directives/home-review-details.js"></script>
 <script src="application/core/projects/project/home/directives/home-process-details.js"></script>
+<script src="application/core/projects/project/home/directives/file-upload-panel.js"></script>
+<script src="application/core/projects/project/home/directives/display-file-upload-entry.js"></script>
 <script src="application/core/projects/project/files/files.js"></script>
 <script src="application/core/projects/project/files/overview.js"></script>
 <script src="application/core/projects/project/files/list.js"></script>
