Issue-609 Issue-610 Issue613 creation of sample, reviews and notes inside homepage

--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -33,6 +33,6 @@
         </small>
     </p>
     <div ng-if="sample.showDetails">
-        <home-sample-details sample="sample"></home-sample-details>
+        <home-sample-details></home-sample-details>
     </div>
 </div>
