--- a/website/app/application/core/projects/project/home/directives/home-notes.html
+++ b/website/app/application/core/projects/project/home/directives/home-notes.html
@@ -19,12 +19,12 @@
         <input type="text" ng-model="search" class="pull-right col-xs-4"
                placeholder="Search notes...">
         <span class="add-item pull-right">
-            <a ui-sref="projects.project.notes.create" tooltip="Add Note">
+            <a  ng-click="createNote()" tooltip="Add Note">
                 <i class="fa fa-fw fa-plus"></i>
             </a>
         </span>
     </div>
-    <div class="panel-body home-panel-body">
+    <div ng-hide="model.createNote" class="panel-body home-panel-body">
         <ul class="list-unstyled">
             <li class="home-item"
                 ng-class="{'open-item-details': showDetails($index)}"
@@ -35,5 +35,8 @@
                 <div>No notes.</div>
             </li>
         </ul>
+    </div>
+    <div ng-show="model.createNote" class="panel-body home-panel-body">
+        <create-note model="model"></create-note>
     </div>
 </div>
