--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -17,12 +17,12 @@
         <input type="text" ng-model="search.name"
                placeholder="Search samples..." class="pull-right col-xs-4">
         <span class="add-item pull-right">
-            <a ui-sref="projects.project.samples.create" tooltip="Add Sample">
+            <a ng-click="createSample()"  tooltip="Add Sample">
                 <i class="fa fa-plus"></i>
             </a>
         </span>
     </div>
-    <div class="panel-body home-panel-body" ng-class="{'no-max-height': isExpanded()}">
+    <div ng-hide="model.createSample"  class="panel-body home-panel-body" ng-class="{'no-max-height': isExpanded()}">
         <ul class="list-unstyled">
             <li class="home-item"
                 ng-class="{'open-item-details': sample.showDetails}"
@@ -35,5 +35,8 @@
                 </div>
             </li>
         </ul>
+    </div>
+    <div ng-show="model.createSample" class="panel-body home-panel-body">
+        <create-sample model="model"></create-sample>
     </div>
 </div>
