Add directory icon next to the directory name for files to upload.

--- a/website/app/application/core/projects/project/home/directives/file-upload-panel.html
+++ b/website/app/application/core/projects/project/home/directives/file-upload-panel.html
@@ -24,7 +24,7 @@
     <ul class="list-unstyled"
         ng-repeat="(dir, files) in filesByDir">
         <li class="home-item" style="background-color: #3E4B5C; color: white">
-            {{dir}}
+            <i class="fa fa-fw fa-folder"></i>{{dir}}
         </li>
         <li class="home-item"
             ng-repeat="file in files">
