--- a/website/app/application/core/projects/project/samples/create.html
+++ b/website/app/application/core/projects/project/samples/create.html
@@ -16,10 +16,10 @@
             <div class="form-group"> <br>
                 <label class="control-label col-xs-2"></label>
                 <button validation-submit="Sample" type="button"
-                        class="btn btn-xs btn-primary" ng-click="create()">
+                        class="btn btn-xs btn-mini btn-primary" ng-click="create()">
                     Create
                 </button>
-                <button type="button" class="btn btn-danger btn-xs" ng-click="cancel()">Cancel</button>
+                <button type="button" class="btn btn-xs btn-mini btn-danger" ng-click="cancel()">Cancel</button>
             </div>
         </form>
     </div>
