--- a/website/app/application/core/projects/project/action/add-projects-to-sample.html
+++ b/website/app/application/core/projects/project/action/add-projects-to-sample.html
@@ -1,12 +1,12 @@
 <form class="form-horizontal">
     <div class="form-group">
         <label class="control-label col-xs-2">Projects:</label>
-        <div class="col-xs-2">
+        <div class="col-xs-6">
             <div ng-show="doc.projects.length !==0 ">
-                <table class="table table-striped mc-table-hover table-condensed mc-table">
+                <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th></th>
+                            <th>Project Name</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -14,7 +14,7 @@
                         <tr ng-repeat="i in doc.projects">
                             <td>{{i.name}}</td>
                             <td>
-                                <button class="btn btn-default btn-danger"
+                                <button class="btn btn-xs btn-mini btn-danger"
                                         ng-click="removeProjects($index)">
                                     Delete
                                 </button>
@@ -28,13 +28,13 @@
 
     <div class="form-group">
         <label class="control-label col-xs-2"></label>
-        <div class="col-xs-2">
+        <div class="col-xs-4">
             <select class="form-control" ng-model="bk.selected_project"
                     ng-options="pr.name for pr in projects">
             </select>
         </div>
         <div class="col-xs-1">
-            <button class="btn btn-default" ng-click="populateProjects()">Add Project
+            <button class="btn btn-xs btn-mini btn-primary" ng-click="populateProjects()">Add Project
             </button>
         </div>
     </div>
