--- a/website/app/application/core/projects/project/action/create-sample-composition.html
+++ b/website/app/application/core/projects/project/action/create-sample-composition.html
@@ -24,11 +24,11 @@
                    value="wt%" ng-model="doc.properties.composition.unit"/>
             weight %
         </div>
-        <div class="col-xs-1">
+        <div class="col-xs-2">
             <input placeholder="value..." class="form-control" ng-model="bk.element_value">
         </div>
-        <div class="col-xs-1">
-            <button ng-click="addComposition()" class="btn btn-default">add</button>
+        <div class="col-xs-2">
+            <button ng-click="addComposition()" class="btn btn-xs btn-mini btn-primary">add</button>
         </div>
     </div>
 
