--- a/website/app/application/core/projects/project/notes/create.html
+++ b/website/app/application/core/projects/project/notes/create.html
@@ -1,28 +1,28 @@
 <div class="info-box">
     <form name="Form" class="form-horizontal">
         <div class="form-group">
-            <label class="control-label col-lg-2">Title:</label>
-            <div class="col-lg-4">
+            <label class="control-label col-xs-2">Title:</label>
+            <div class="col-xs-4">
                 <input class="form-control" ng-model="model.title">
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-lg-2">Note:</label>
-            <div class="col-lg-8">
-                <text-angular ta-toolbar="[['h1','h2','h3', 'h4', 'h5', 'h6','p', 'quote'],
-                              ['bold','italics','underline','ul','ol'],['undo', 'redo','clear'],
+            <label class="control-label col-xs-2">Note:</label>
+            <div class="col-xs-8">
+                <text-angular ta-toolbar="[['h2','h5', 'h6','quote'],
+                              ['bold','italics','underline'],
                               ['justifyLeft','justifyCenter','justifyRight'], ['insertLink', 'insertImage']]"
                               ng-model="model.note">
                 </text-angular>
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-lg-2"></label>
+            <label class="control-label col-xs-2"></label>
             <button validation-submit="Form" ng-click="create()"
-                    class="btn btn-default btn-primary">
+                    class="btn btn-xs btn-mini btn-primary">
                 Create
             </button>
-            <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
+            <button class="btn btn-xs btn-mini btn-danger" ng-click="cancel()">Cancel</button>
         </div>
     </form>
 </div>
