--- a/website/app/index/sidebar-actions.html
+++ b/website/app/index/sidebar-actions.html
@@ -4,59 +4,59 @@
        style="color: #97c7e0">
         {{project.name}}
         <i class="fa"
-           ng-class="{'fa-chevron-right': !showProjectAction, 'fa-chevron-down': showProjectActions}">
+           ng-class="{'fa-chevron-right': !showProjectActions, 'fa-chevron-down': showProjectActions}">
         </i>
     </a>
 
     <div ng-show="showProjectActions">
         <a ng-show="false" class="list-group-item"
            ui-sref="projects.project.home{id: project.id}"
-           ng-click="setActionActive('home')"
-           ng-class="{active: isActionActive('home')}">
+           ng-click="setActivePanel('home')"
+           ng-class="{active: isPanelActive('home')}">
             <i class="fa fa-fw fa-home"></i> Home
         </a>
 
-        <a class="list-group-item" ng-class="{disabled: !getActionActive('processes')}"
-           ng-click="setActionActive('processes')">
+        <a class="list-group-item" ng-class="{disabled: !getActivePanel('processes')}"
+           ng-click="setActivePanel('processes')">
             <i class="fa fa-fw fa-code-fork"></i> Provenance
             <span class="pull-right white">{{project.processes.length}}</span>
         </a>
 
-        <a class="list-group-item" ng-class="{disabled: !getActionActive('samples')}"
-           ng-click="setActionActive('samples')">
+        <a class="list-group-item" ng-class="{disabled: !getActivePanel('samples')}"
+           ng-click="setActivePanel('samples')">
             <i class="fa fa-fw fa-cubes"></i> Samples
             <span class="pull-right white">{{project.samples.length}}</span>
         </a>
 
-        <a class="list-group-item" ng-class="{disabled: !getActionActive('notes')}"
-           ng-click="setActionActive('notes')">
+        <a class="list-group-item" ng-class="{disabled: !getActivePanel('notes')}"
+           ng-click="setActivePanel('notes')">
             <i class="fa fa-fw fa-edit"></i> Notes
             <span class="pull-right white">{{project.notes.length}}</span>
         </a>
 
-        <a class="list-group-item" ng-class="{disabled: !getActionActive('files')}"
-           ng-click="setActionActive('files')">
+        <a class="list-group-item" ng-class="{disabled: !getActivePanel('files')}"
+           ng-click="setActivePanel('files')">
             <i class="fa fa-fw fa-files-o"></i> Files
             <span class="pull-right"
                   style="color: white">{{project | projectSize}}</span>
         </a>
 
-        <a class="list-group-item" ng-class="{disabled: !getActionActive('reviews')}"
-           ng-click="setActionActive('reviews')">
+        <a class="list-group-item" ng-class="{disabled: !getActivePanel('reviews')}"
+           ng-click="setActivePanel('reviews')">
             <i class="fa fa-fw fa-comment"></i> Reviews
             <span class="badge badge-light">{{(project.reviews | byKey: 'status': 'open').length}}</span>
         </a>
 
         <a ng-show="false" class="list-group-item"
-           ng-click="setActionActive('tasks')"
-           ng-class="{active: isActionActive('tasks')}">
+           ng-click="setActivePanel('tasks')"
+           ng-class="{active: isPanelActive('tasks')}">
             <i class="fa fa-fw fa-check-square"></i> Tasks
             <span class="badge badge-light">{{project.todos.length}}</span>
         </a>
 
         <a ng-show="false" class="list-group-item"
-           ng-click="setActionActive('preferences')"
-           ng-class="{active: isActionActive('preferences')}">
+           ng-click="setActivePanel('preferences')"
+           ng-class="{active: isPanelActive('preferences')}">
             <i class="fa fa-fw fa-gears"></i> Preferences
         </a>
     </div>
